--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,6 +2,12 @@
 layout: default
 ---
 
+<!-- koyo -->
+{% if page && page.css %}
+  <link rel='stylesheet' href='{{site.baseurl | prepend:site.url}}/css/{{ page.css }}.css' />
+{% endif %}
+<!-- koyo -->
+
 <!-- Image to hack wechat -->
 <!-- <img src="/img/icon_wechat.png" width="0" height="0"> -->
 <!-- <img src="{{ site.baseurl }}/{% if page.header-img %}{{ page.header-img }}{% else %}{{ site.header-img }}{% endif %}" width="0" height="0"> -->
