--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -76,7 +76,7 @@
                     <iframe
                         style="margin-left: 2px; margin-bottom:-5px;"
                         frameborder="0" scrolling="0" width="91px" height="20px"
-                        src="https://ghbtns.com/github-btn.html?user=koyo922&repo=koyo922.github.io&type=star&count=true" >
+                        src="https://ghbtns.com/github-btn.html?user=Huxpro&repo=huxblog-boilerplate&type=star&count=true" >
                     </iframe>
                 </p>
             </div>
