--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -92,6 +92,7 @@
 
 <!-- Custom Theme JavaScript -->
 <script src="{{ "/js/hux-blog.min.js " | prepend: site.baseurl }}"></script>
+<script src="{{ "/js/koyo-blog.js " | prepend: site.baseurl }}"></script>
 
 
 <!-- async load function -->
